<resources>
    <string name="app_name">I Do</string>

    <!-- Strings related to login/Register -->
    <string name="new_user_message">Don\'t have an account?</string>
    <string name="already_user">Already have an account?</string>
    <string name="sign_in_here">Sign in here!</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="prompt_name">Full Name (First and Last)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="register_link">Register Here!</string>
    <string name="error_invalid_email">The email address you have entered is invalid</string>
   <string name="no_email">Please enter an email address</string>
    <string name="no_password">Please enter a password</string>
    <string name="error_invalid_password">The password you have entered is invalid</string>
    <string name="password_confirmation_error">The passwords you have entered do not match</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>
    <string name="forgot_password_title">I-Do....n\'t remember my password?</string>
    <string name="registered_email">Please enter the email address associated with your account</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="title">I-Do List Summary</string>
    <string name="welcome_message">Welcome to I-Do!</string>
    <string name="logo">I-Do logo</string>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_login_success">LoginSuccessActivity</string>
    <string name="google_sign_in">Sign in with Google</string>
    <string name="title_activity_venue_maps_search">VenueMapsSearch</string>


    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="signed_out">Signed Out</string>
    <string name="phone_title_text">Two Step Verification</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="user_id">Current User:</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="sign_out">Sign Out</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="signed_in">Signed In</string>

    <!-- Navigation Drawer -->
    <string name="nav_settings">Settings</string>
    <string name="nav_google_maps">Google Maps</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_locations">Locations</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>


    <!-- Main Activity -->
    <string name="view_lists">View Lists</string>
    <string name="search_vendors">Search Vendors</string>
    <string name="budget">Budget</string>

</resources>
