<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.tyle.ido.LoginActivity">

    <!-- Login progress -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:id="@+id/login_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prompt_login"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/login_email"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_grey" />

            <EditText
                android:id="@+id/login_password"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/white_grey" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="8dp" >

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/show_password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/loginbutton_selector"
                android:padding="3dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/google_sign_in" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/registration_text"
                    android:text="@string/new_user_message"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/action_register"
                    android:textColor="@color/white"
                    android:gravity="end"
                    android:layout_weight="1"/>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>
