<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingTop="25dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <ImageView
            android:id="@+id/imageView"
            android:contentDescription="@string/logo"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
            <TextView
                android:id="@+id/user_field_text"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:text="@string/user_id"/>
            <TextView
                android:id="@+id/user_field"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:textColor="@color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <View
                android:layout_width="0dp"
                android:layout_height="3dp"
                android:background="@color/white"
                android:layout_weight="0.8" />
        </LinearLayout>

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/phone_title_text"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </LinearLayout>


        <LinearLayout
            android:id="@+id/phone_auth_fields"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <EditText
                    android:id="@+id/field_phone_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:textColorHint="@color/white"
                    android:layout_weight="1.0"
                    android:inputType="phone"/>

                <EditText
                    android:id="@+id/field_verification_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_verification_code"
                    android:textColorHint="@color/white"
                    android:layout_weight="1.0"
                    android:inputType="number"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <Button
                    android:id="@+id/button_start_verification"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/start_phone_auth"
                    android:theme="@style/ThemeOverlay.MyDarkButton" />

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_verify_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/verify_phone_auth"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">
                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_resend"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/resend_phone_auth"/>

                <Button
                    android:theme="@style/ThemeOverlay.MyDarkButton"
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:text="@string/cancel"/>
            </LinearLayout>

        </LinearLayout>




</LinearLayout>