<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.example.tyle.ido.LoginActivity">
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/welcome_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/action_register"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/prompt_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />


        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="14sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/white" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/loginbutton_selector"
            android:padding="3dp"
            android:text="@string/action_register"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/already_user"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:gravity="start"
                android:text="@string/already_user"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/sign_in_here"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:gravity="end"
                android:padding="10dp"
                android:text="@string/sign_in_here"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>